fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -119,21 +119,23 @@ hr {
   background-color: #C1A676;
 }
 
+.card {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 40%;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 /* RESPONSIVE IMAGES */
 img {
   max-width: 100%;
   height: auto;
-}
-
-.full-screen-width {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  max-width: 100vw;
-  width: 100vw;
-  z-index: -9999;
 }
 
 /* RESET BODY */
@@ -526,9 +528,6 @@ section {
     min-width: 0;
     margin: 0 1em 0 1em;
   }
-  .site-header .site-nav .button {
-    margin: 1em 0 1em 22em;
-  }
 }
 
 /* FOOTER SITE-NAV */
@@ -544,157 +543,4 @@ section {
   display: inline-block;
   padding: 1em;
   line-height: 1;
-}
-
-/* ANIMATION */
-.hero .container *,
-.hero[data-sectionstate=inactive] .container * {
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  opacity: 0;
-  -webkit-transform: translate(0, -20px);
-          transform: translate(0, -20px);
-}
-.hero .container *:nth-child(1),
-.hero[data-sectionstate=inactive] .container *:nth-child(1) {
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
-}
-.hero .container *:nth-child(2),
-.hero[data-sectionstate=inactive] .container *:nth-child(2) {
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s;
-}
-.hero .container *:nth-child(3),
-.hero[data-sectionstate=inactive] .container *:nth-child(3) {
-  -webkit-transition-delay: 0.6s;
-          transition-delay: 0.6s;
-}
-.hero .container *:nth-child(4),
-.hero[data-sectionstate=inactive] .container *:nth-child(4) {
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
-}
-.hero .container *:nth-child(5),
-.hero[data-sectionstate=inactive] .container *:nth-child(5) {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
-.hero[data-sectionstate=active] .container *,
-.hero[data-sectionstate=inactive][data-sectionstate=active] .container * {
-  opacity: 1;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-
-#section01 .one-half:nth-child(1) {
-  -webkit-transition: all 2s ease-out;
-  transition: all 2s ease-out;
-  -webkit-transform: translate(-50px, 0);
-          transform: translate(-50px, 0);
-}
-#section01[data-sectionstate=active] .one-half:nth-child(1) {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-#section01 .one-half:nth-child(2) {
-  -webkit-transition: all 2s ease-out;
-  transition: all 2s ease-out;
-  -webkit-transform: translate(50px, 0);
-          transform: translate(50px, 0);
-}
-#section01[data-sectionstate=active] .one-half:nth-child(2) {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-
-#section02 .one-half:nth-child(1) {
-  -webkit-transition: all 2s ease-out;
-  transition: all 2s ease-out;
-  -webkit-transform: translate(-50px, -50px);
-          transform: translate(-50px, -50px);
-}
-#section02[data-sectionstate=active] .one-half:nth-child(1) {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-#section02 .one-half:nth-child(2) {
-  -webkit-transition: all 2s ease-out;
-  transition: all 2s ease-out;
-  -webkit-transform: translate(50px, 50px);
-          transform: translate(50px, 50px);
-}
-#section02[data-sectionstate=active] .one-half:nth-child(2) {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-
-.animate-scale-in,
-[data-sectionstate=inactive] .animate-scale-in {
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  opacity: 0;
-  -webkit-transform: scale(0.8);
-          transform: scale(0.8);
-}
-
-[data-sectionstate=active] .animate-scale-in {
-  opacity: 1;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-}
-
-.animate-slide-up,
-[data-sectionstate=inactive] .animate-slide-up {
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  opacity: 0;
-  -webkit-transform: translate(0, 100px);
-          transform: translate(0, 100px);
-}
-
-[data-sectionstate=active] .animate-slide-up {
-  opacity: 1;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-
-.animate-drop-in-with-delay *,
-[data-sectionstate=inactive] .animate-drop-in-with-delay * {
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  opacity: 0;
-  -webkit-transform: translate(0, -20px);
-          transform: translate(0, -20px);
-}
-.animate-drop-in-with-delay *:nth-child(1),
-[data-sectionstate=inactive] .animate-drop-in-with-delay *:nth-child(1) {
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
-}
-.animate-drop-in-with-delay *:nth-child(2),
-[data-sectionstate=inactive] .animate-drop-in-with-delay *:nth-child(2) {
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s;
-}
-.animate-drop-in-with-delay *:nth-child(3),
-[data-sectionstate=inactive] .animate-drop-in-with-delay *:nth-child(3) {
-  -webkit-transition-delay: 0.6s;
-          transition-delay: 0.6s;
-}
-.animate-drop-in-with-delay *:nth-child(4),
-[data-sectionstate=inactive] .animate-drop-in-with-delay *:nth-child(4) {
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
-}
-.animate-drop-in-with-delay *:nth-child(5),
-[data-sectionstate=inactive] .animate-drop-in-with-delay *:nth-child(5) {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
-
-[data-sectionstate=active] .animate-drop-in-with-delay * {
-  opacity: 1;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
 }
