--- a/scss/partials/_sitenav.scss
+++ b/scss/partials/_sitenav.scss
@@ -111,11 +111,6 @@
             font-size: .8em;
             min-width: 0;
             margin: 0 1em 0 1em;
-
-        }
-
-        .button {
-            margin: 1em 0 1em 22em;
         }
     }
 }
